--- a/PWJS/Jul182023-2.html
+++ b/PWJS/Jul182023-2.html
@@ -11,6 +11,20 @@
         <input type="number" name="tabNum" id="tabNum" min="0">
         <input type="button" id="tabBtn" value="Display Table">
     </form>
+    <br><br>
+    <form>
+        <label for="num4Prime">Enter Any Number</label>
+        <input type="number" name="num4Prime" id="num4Prime" min="0">
+        <input type="button" id="check4PrimeBtn" value="Check 4 PRIME">
+    </form>
+    <br><br>
+    <form>
+        <label for="st">Start</label>
+        <input type="number" name="st" id="st" min="0">
+        <label for="ed">End</label>
+        <input type="number" name="ed" id="ed" min="0">
+        <input type="button" id="primeBtn" value="Display PRIME Numbers">
+    </form>
     <div id="d1">        
     </div>
     
